--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,8 +2,4 @@
 port = 80
 
 [theme]
-primaryColor="#F63366"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
-font="sans serif"
+base="light"
